--- a/mobile-screen.css
+++ b/mobile-screen.css
@@ -12,7 +12,7 @@
   margin-top: 20px;
   font-size: 35px;
   font-weight:200;
-  color: #007bff;
+  color: red;
   outline: none;
   border: none;
   border-radius: 5px;
