--- a/mobile-screen.css
+++ b/mobile-screen.css
@@ -10,7 +10,7 @@
 .st-btn , a {
   padding-top:-2px;
   margin-top: 20px;
-  font-size: 35px;
+  font-size: 40px;
   font-weight:200;
   color: #007bff;
   outline: none;
@@ -23,11 +23,9 @@
 
 .start_btn  {
   width: 90%;
-  margin-top: -40px;
+  margin-top: -100px;
   display:grid;
-  padding: 10px;
-  padding-top:-2px;
-  font-size: 40px;
+  padding: 5px;
   font-weight:400;
   outline: none;
   border: none;
@@ -36,8 +34,41 @@
   cursor: pointer;
 }
 
+.start_btn button  {
+  font-size:35px;
+
+}
+
+#myButton {
+  width: 90%;
+  margin-left: 20px;
+  display:grid;
+  padding:20px;
+  padding-top:-20px;
+  margin-top: 400px;
+  font-size: 35px;
+  font-weight:200;
+  color: #007bff;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  background: #fafafa;
+  cursor: pointer;
+}
+
+
 .info_box{
-  width: 540px;
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  transform: translate(-50%, -50%) scale(0.9);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.quiz_box{
+  width: 100%;
   background: #fff;
   border-radius: 5px;
   transform: translate(-50%, -50%) scale(0.9);
