--- a/style.css
+++ b/style.css
@@ -72,6 +72,19 @@ body{
     cursor: pointer;
 }
 
+#myButton{
+  font-size: 25px;
+  font-weight: 500;
+  color: #007bff;
+  padding: 15px 70px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  background: #fff;
+  cursor: pointer;
+
+}
+
 
 
 .info_box{
