--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 .quiz_box,
 .result_box{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
@@ -48,7 +48,7 @@ body{
 
 .st-btn , a {
   padding-top:-2px;
-  margin-top: 20px;
+  margin-top: -20px;
   font-size: 35px;
   font-weight:200;
   color: #007bff;
@@ -73,6 +73,9 @@ body{
 }
 
 #myButton{
+  width: 210px;
+  margin-top: 350px;
+  margin-left: 577px;
   font-size: 25px;
   font-weight: 500;
   color: #007bff;
