--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
     cursor: pointer;
 }
 
-#myButton{
+#myButton {
   width: 210px;
   margin-top: 350px;
   margin-left: 577px;
@@ -88,6 +88,21 @@ body{
 
 }
 
+#myButtonTwo{
+  width: 610px;
+margin-top: 200px;
+width: 210px;
+margin-left: 177px;
+font-size: 25px;
+font-weight: 500;
+color: #007bff;
+padding: 15px 70px;
+outline: none;
+border: none;
+border-radius: 5px;
+background: #fff;
+cursor: pointer;
+}
 
 
 .info_box{
