--- a/msaal/style.css
+++ b/msaal/style.css
@@ -1,11 +1,11 @@
 body{
   direction: rtl;
-  background-color:rgb(255, 255, 255);
+  background-color:#fff
 }
 
 .qu{
   width: 100%;
-  background: #fff;
+  background: rgb(5, 44, 116);
   border-radius: 5px;
   pointer-events: none;
   transition: all 0.3s ease;
